chage mailto info@skatel.com.np

--- a/index.html
+++ b/index.html
@@ -411,9 +411,9 @@
         <div class="border-box"></div>
         <div class="contact-box">
           <p>For any inquiries, feel free to reach out:</p>
-          <a href="mailto:sandip@skatel.com.np" class="email">
+          <a href="mailto:info@skatel.com.np" class="email">
             <i class="fas fa-envelope"></i>
-            sandip@skatel.com.np
+            info@skatel.com.np
           </a>
         </div>
       </div>
